tests/rosetta/out/Fortran/boyer-moore-string-search.f90
! Generated by Mochi compiler v0.10.26 on 2006-01-02T15:04:05Z
program boyer_moore_string_search
  implicit none
    integer :: hlen
    integer :: nlen
    integer :: i
    integer, dimension(0) :: result
    integer :: start
      integer :: idx
        integer, allocatable, dimension(:) :: app0
    character(len=100) :: s
      character(len=100) :: s1
    integer, dimension(6) :: texts
    integer, dimension(6) :: patterns
      character(len=100) :: s2
    integer :: j
      integer :: idxs
      character(len=100) :: s3
  main()
  contains
  recursive integer function indexOfStr(h,n) result(res)
    character(len=100), intent(in) :: h
    character(len=100), intent(in) :: n
    hlen = size(h)
    nlen = size(n)
    if ((nlen == 0)) then
      res = 0
      return
    end if
    i = 0
    do while (((i <= hlen) - nlen))
      if ((h(i+1:(i + nlen)) == n)) then
        res = i
        return
      end if
      i = (i + 1)
    end do
    res = -1
    return
  end function indexOfStr
  recursive integer function stringSearchSingle(h,n) result(res)
    character(len=100), intent(in) :: h
    character(len=100), intent(in) :: n
    res = indexOfStr(h,n)
    return
  end function stringSearchSingle
  recursive integer function stringSearch(h,n) result(res)
    character(len=100), intent(in) :: h
    character(len=100), intent(in) :: n
    result = (//)
    start = 0
    hlen = size(h)
    nlen = size(n)
    do while ((start < hlen))
      idx = indexOfStr(h(start+1:hlen),n)
      if ((idx >= 0)) then
        allocate(app0(size(result)+1))
        app0(1:size(result)) = result
        app0(size(result)+1) = (start + idx)
        result = app0
        start = ((start + idx) + nlen)
      else
        exit
      end if
    end do
    res = result
    return
  end function stringSearch
  recursive character(len=100) function display(nums) result(res)
    integer, intent(in) :: nums
    s = '['
    i = 0
    do while ((i < size(nums)))
      if ((i > 0)) then
        s = s // ', '
      end if
      write(s1,'(G0)') nums(((i)+1))
      s = (s + s1)
      i = (i + 1)
    end do
    s = s // ']'
    res = s
    return
  end function display
  recursive integer function main() result(res)
    texts = (/'GCTAGCTCTACGAGTCTA','GGCTATAATGCGTA','there would have been a time for such a word','needle need noodle needle','DKnuthusesandprogramsanimaginarycomputertheMIXanditsassociatedmachinecodeandassemblylanguages','Nearby farms grew an acre of alfalfa on the dairy's behalf, with bales of that alfalfa exchanged for milk.'/)
    patterns = (/'TCTA','TAATAAA','word','needle','and','alfalfa'/)
    i = 0
    do while ((i < size(texts)))
      write(s2,'(G0)') (i + 1)
      print *, trim(trim('text' // s2) // ' = ') // texts(((i)+1))
      i = (i + 1)
    end do
    print *, ''
    j = 0
    do while ((j < size(texts)))
      idxs = stringSearch(texts(((j)+1)),patterns(((j)+1)))
      write(s3,'(G0)') (j + 1)
      print *, trim(trim(trim(trim('Found "' // patterns(((j)+1))) // '" in 'text') // s3) // '' at indexes ') // display(idxs)
      j = (j + 1)
    end do
  end function main
end program boyer_moore_string_search
